<resources>
    <string name="app_name" translatable="false">Regression</string>
    <string name="date">Date</string>
    <string name="settings">Settings</string>
    <string name="regression_list">Regression list</string>
    <string name="regression_data">Data</string>
    <string name="regression_report">Report</string>
    <string name="regression_new">New</string>
    <string name="regression_label">Label</string>
    <string name="regression_x_label">X label (Can be empty)</string>
    <string name="regression_y_label">Y label (Can be empty)</string>
    <string name="regression_create">Create</string>
    <string name="text_error_empty_field">Empty field</string>
    <string name="sheet_type_linear">Linear</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="action_sweep_all">Sweep all</string>
    <string name="add_new_data_point">Add new entry point</string>
    <string name="action_delete_selected">Delete selected</string>
    <string name="action_copy_to_another">Copy to another sheet</string>i
    <string name="action_add_empty_data_points">Add empty entries</string>
    <string name="error_invalid">Invalid field</string>
    <string name="hint_number_of_data_points">Data point number</string>
    <string name="description_add_data_points">Add data points</string>
    <string name="action_validate_data">Validate</string>
    <string name="action_validate_and_save">Validate and save</string>
    <string name="error_not_enough_entries">You must have at least 3 entries</string>
    <string name="error_invalid_data_points">Invalid data please check it</string>
    <string name="saved">Saved</string>
    <string name="formula_fit_line">Fit line</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="r" translatable="false">R</string>
    <string name="square_of_r">Square of R</string>
    <string name="n" translatable="false">N</string>
    <string name="sXX" translatable="false">Sxx</string>
    <string name="sYY" translatable="false">Syy</string>
    <string name="sXY" translatable="false">Sxy</string>
    <string name="x_average">X average</string>
    <string name="y_average">Y average</string>
    <string name="sum_of_x">Sum of X</string>
    <string name="sum_of_y">Sum of Y</string>
    <string name="sum_of_xy_products">Sum of X*Y products</string>
    <string name="sum_of_squares_of_x">Sum of squares of X</string>
    <string name="sum_of_squares_of_y">Sum of squares of Y</string>
    <string name="ln_x_average">LnX Average</string>
    <string name="ln_y_average">LnY Average</string>
    <string name="sum_of_ln_x">Sum of LnX</string>
    <string name="sum_of_ln_y">Sum of LnY</string>
    <string name="sum_of_ln_x_ln_y_products">Sum of LnX*LnY</string>
    <string name="formula_fit_line_linear">Fit line</string>
    <string name="show_plot">Show graph</string>
    <string name="original_data">Original data</string>
    <string name="title_dialog_premium_feature">Premium feature</string>
    <string name="description_offer_premium">Enjoy of this and another premium features getting a premium subscription. <br/> Or watch a video to access to this feature.</string>
    <string name="watch_video">Watch video</string>
    <string name="get_a_subscription">Get a subscription</string>
    <string name="action_import_csv_data">Import CSV</string>
    <string name="user_earned_reward">Thank you, now you can proceed</string>
    <string name="import_data">Import</string>
    <string name="import_data_message">The current entries gonna be imported:</string>
    <string name="import_data_message_with_errors">The current entries gonna be imported (%d errors detected) :</string>
    <string name="import_data_title_imported_data_">Import Data</string>
    <string name="title_dialog_export_data">Export Data</string>
    <string name="import_data_hint_path">Path</string>
    <string name="export">Export</string>
    <string name="storage_permission_request_title">Storage permission needed</string>
    <string name="storage_permission_request_message">Let us access the storage to save document files and give you a better experience.</string>
    <string name="grant">Grant</string>
    <string name="no_thanks">No, thanks</string>
    <string name="document_saved">Document saved</string>
    <string name="buy_subscription_offer_message">Don\'t you want to see the ads? Enjoy using Regression without any of them</string>
    <string name="generic_x_label" translatable="false">X</string>
    <string name="generic_y_label" translatable="false">Y</string>
    <string name="preference_decimal_rounding">Decimal rounding</string>
    <string name="settings_visible_decimals_description">This only works for the result views, not for the input data. (Currently %d)</string>
    <string name="_settings_buy_subscription_description">Enjoy Regression without ads and many other features</string>
    <string name="category_title_application_settings">Application</string>
    <string name="subscription_pay_as_you_go">Pay as you go, cancel anytime</string>
    <string name="subscription_monthly">Monthly</string>
    <string name="subscription_billed_monthly">Billed monthly</string>
    <string name="subscription_yearly">Yearly</string>
    <string name="subscription_billed_yearly">Billed yearly</string>
    <string name="buy_subscription_enjoy_title">Purchase a subscription <br/> and enjoy  all of these features:</string>
    <string name="premium_feature_description_no_ads">No ads</string>
    <string name="cancelled_purchase">Cancelled purchase</string>
    <string name="empty_message_no_data">No data</string>
    <string name="empty_message_no_sheets">No sheets</string>
    <string name="subtitle_format">Format</string>
    <string name="export_saved_as">Saved as:</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="export_saving">Saving</string>
    <string name="export_problem_saving_error_21">"Problem saving - Code 21 "</string>
    <string name="export_problem_saving_error_22">"Problem saving - Code 22 "</string>
    <string name="export_sheet_information">Sheet information</string>
    <string name="export_sheet_results">Sheet results</string>
    <string name="export_error_no_application_to_open_file">Please install an app to open this file</string>
    <string name="action_create_report">Create report</string>
    <string name="name">Name</string>
    <string name="created">Created</string>
    <string name="regression_type">Regression type</string>
    <string name="x_label">X label</string>
    <string name="y_label">Y label</string>
    <string name="sheet_type_power">Power</string>
    <string name="title_premium_feature_export_complete_report">Create report</string>
    <string name="export_error_empty_filename">Empty file name</string>
    <string name="a_error">A error</string>
    <string name="b_error">B error</string>
    <string name="loading">Loading</string>
    <string name="remove">Remove</string>
    <string name="proposal_sheet_remove">Remove Sheet</string>
    <string name="message_sheet_remove">Are you sure you want to remove this sheet?</string>
    <string name="subscription_not_supported_message">We are so sorry, but your device does not support subscriptions</string>
    <string name="action_data_size" translatable="false">Data size</string>
    <string name="help">Help</string>
    <string name="help_description_import_data">If you have any doubt, you can watch the next video: https://youtu.be/p-5LVxmSdIU</string>
    <string name="help_description_export_data">Export your data to your prefer format.</string>
    <string name="about_us">About us</string>
    <string name="copyright_advice" translatable="false">Copyright 2017–2021</string>
    <string name="key_preference_about_us" translatable="false">key_preference_copyright_advice</string>
    <string name="key_preference_rate_us" translatable="false">key_preference_rate_us</string>
    <string name="rate_us">Rate us</string>

    <string-array name="regression_types">
        <item>Linear</item>
        <item>Power</item>
    </string-array>
    <string name="rate_us_summary">Rate us on Google Play</string>

</resources>