<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/get_a_subscription">
        <Preference
            android:key="@string/key_preference_buy_subscription"
            android:icon="@drawable/ic_crown"
            android:title="@string/get_a_subscription"
            android:summary="@string/_settings_buy_subscription_description"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/category_title_application_settings">
        <SeekBarPreference
            android:key="@string/key_preference_decimal_count"
            android:title="@string/preference_decimal_rounding"
            android:icon="@drawable/ic_decimal"
            android:summary="@string/settings_visible_decimals_description"
            android:max="20"
            app:min="3"
            app:updatesContinuously="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_us">
        <Preference
            android:key="@string/key_preference_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/app_name"
            android:summary="@string/copyright_advice"/>

        <Preference
            android:key="@string/key_preference_rate_us"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_us"
            android:summary="@string/rate_us_summary"/>

    </PreferenceCategory>


</PreferenceScreen>