<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="dialog_fragment_export_viewmodel"
            type="com.alphemsoft.education.regression.viewmodel.DataSheetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_spacing"
        android:background="@drawable/drawable_shape_title"
        android:backgroundTint="@android:color/white"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/title_dialog_export_data"
            app:layout_constraintEnd_toEndOf="parent"
            style="?textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:prefixText="/Documents/"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:hint="@string/import_data_hint_path"
            app:endIconDrawable="@drawable/ic_add_multiple_box"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginEnd="@dimen/small_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_path"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@={dialog_fragment_export_viewmodel.exportNameLiveData}"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rg_format_options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_export"
            android:text="@android:string/cancel"
            android:layout_marginEnd="@dimen/small_spacing"
            android:backgroundTint="?attr/colorError"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_export"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rg_format_options"
            app:layout_constraintStart_toEndOf="@id/bt_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/export"
            android:layout_marginStart="@dimen/small_spacing"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subtitle_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_path"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/subtitle_format"
            android:textAlignment="textStart"
            android:layout_margin="@dimen/medium_spacing"/>

        <RadioGroup
            android:id="@+id/rg_format_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_format"
            app:layout_constraintStart_toStartOf="@id/til_path"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:gravity="center">
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>