<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="buySubscriptionViewModel"
            type="com.alphemsoft.education.regression.viewmodel.PurchaseSubscriptionViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_background_monthly_subs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_background_yearly_subs"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/big_spacing"
            android:background="@drawable/drawable_square_rounded_corners_monthly_subs"
            android:clickable="true"
            android:focusable="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_monthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/view_background_monthly_subs"
            app:layout_constraintRight_toRightOf="@id/view_background_monthly_subs"
            app:layout_constraintTop_toTopOf="@id/view_background_monthly_subs"
            android:paddingTop="@dimen/medium_spacing"
            android:text="@string/subscription_monthly"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/TextOnSurface"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price_monthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_spacing"
            app:layout_constraintLeft_toLeftOf="@id/view_background_monthly_subs"
            app:layout_constraintRight_toRightOf="@id/view_background_monthly_subs"
            app:layout_constraintTop_toBottomOf="@id/tv_title_monthly"
            android:text="35.99 BOB"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/TextOnSurface"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_spacing"
            app:layout_constraintLeft_toLeftOf="@id/view_background_monthly_subs"
            app:layout_constraintRight_toRightOf="@id/view_background_monthly_subs"
            app:layout_constraintBottom_toBottomOf="@id/view_background_monthly_subs"
            android:text="@string/subscription_billed_monthly"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/TextOnSurface"/>


        <View
            android:id="@+id/view_background_yearly_subs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintStart_toEndOf="@id/view_background_monthly_subs"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/big_spacing"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/drawable_square_rounded_corners_yearly_subs"
            android:clickable="true"
            android:focusable="true"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_yearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/view_background_yearly_subs"
            app:layout_constraintRight_toRightOf="@id/view_background_yearly_subs"
            app:layout_constraintTop_toTopOf="@id/view_background_yearly_subs"
            android:paddingTop="@dimen/medium_spacing"
            android:text="@string/subscription_yearly"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/TextOnSurface"
            android:textColor="@color/color_buy_subscription"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price_yearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_spacing"
            app:layout_constraintLeft_toLeftOf="@id/view_background_yearly_subs"
            app:layout_constraintRight_toRightOf="@id/view_background_yearly_subs"
            app:layout_constraintTop_toBottomOf="@id/tv_title_yearly"
            android:text="35.99 BOB"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/TextOnSurface"
            android:textColor="@color/color_buy_subscription"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_spacing"
            android:text="@string/subscription_billed_yearly"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_background_yearly_subs"
            app:layout_constraintLeft_toLeftOf="@id/view_background_yearly_subs"
            app:layout_constraintRight_toRightOf="@id/view_background_yearly_subs"
            style="@style/TextOnSurface"
            android:textColor="@color/color_buy_subscription"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pay_as_you_go_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/view_background_monthly_subs"
            app:layout_constraintRight_toRightOf="@+id/view_background_yearly_subs"
            app:layout_constraintTop_toBottomOf="@id/view_background_monthly_subs"
            android:text="@string/subscription_pay_as_you_go"
            android:layout_marginTop="@dimen/medium_spacing"
            android:textStyle="bold"
            android:textColor="@color/color_yearly_end"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_features"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            android:text="@string/buy_subscription_enjoy_title"
            app:layout_constraintLeft_toLeftOf="@id/tv_pay_as_you_go_message"
            app:layout_constraintRight_toRightOf="@+id/tv_pay_as_you_go_message"
            app:layout_constraintStart_toStartOf="@+id/tv_price_monthly"
            app:layout_constraintTop_toBottomOf="@id/tv_pay_as_you_go_message"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_features"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView"
            app:layout_constraintStart_toStartOf="@+id/tv_title_features"
            app:layout_constraintTop_toBottomOf="@id/tv_title_features"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginBottom="@dimen/big_spacing"
            android:padding="@dimen/big_spacing"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>