<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="show_export_view_model"
            type="com.alphemsoft.education.regression.viewmodel.DataSheetViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/ad_template_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:gnt_template_type="@layout/gnt_medium_template_view"
            android:visibility="gone"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_container_data_exported"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ad_template_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/drawable_square_rounded_corners"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_margin="@dimen/medium_spacing"
            android:padding="@dimen/medium_spacing"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_saved_as"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_document_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/big_spacing"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_container_data_exported"
            app:layout_constraintStart_toStartOf="@id/ll_container_data_exported"
            app:layout_constraintEnd_toStartOf="@id/bt_share"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/open"
            android:backgroundTint="#212121"
            app:icon="@drawable/ic_open_in_new"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_container_data_exported"
            app:layout_constraintStart_toEndOf="@id/bt_open"
            app:layout_constraintEnd_toEndOf="@id/ll_container_data_exported"
            android:text="@string/share"
            android:layout_marginStart="@dimen/small_spacing"
            android:backgroundTint="#212121"
            app:icon="@drawable/ic_share_variant" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bt_open"
            app:layout_constraintStart_toStartOf="@id/bt_open"
            app:layout_constraintEnd_toEndOf="@id/ll_container_data_exported"
            android:text="@android:string/ok"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
